# shrimp-doc-viewer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  unsupported_or_broken_file.md
.github/workflows/: ci.yml  pages.yml  publish.yml
crates/dv-docx/: Cargo.toml
crates/dv-docx/examples/: docx_demo.rs
crates/dv-docx/src/: lib.rs
crates/dv-flow/: Cargo.toml
crates/dv-flow/src/: lib.rs
crates/dv-image/: Cargo.toml
crates/dv-image/src/: lib.rs
crates/dv-image/tests/: decode.rs
crates/dv-ir/: Cargo.toml
crates/dv-ir/src/: lib.rs
crates/dv-md/: Cargo.toml
crates/dv-md/src/: lib.rs
crates/dv-odf/: Cargo.toml
crates/dv-odf/src/: lib.rs
crates/dv-pptx/: Cargo.toml
crates/dv-pptx/examples/: pptx_demo.rs
crates/dv-pptx/src/: lib.rs
crates/dv-render/: Cargo.toml
crates/dv-render/examples/: demo.rs
crates/dv-render/src/: lib.rs
crates/dv-rtf/: Cargo.toml
crates/dv-rtf/src/: lib.rs
crates/dv-text/: Cargo.toml
crates/dv-text/src/: lib.rs
crates/dv-wasm/: Cargo.toml
crates/dv-wasm/src/: lib.rs
crates/dv-xlsx/: Cargo.toml
crates/dv-xlsx/examples/: xlsx_demo.rs
crates/dv-xlsx/src/: lib.rs  model.rs
demo/: index.html
examples/assets/: _pdfsrc-multi.html  _pdfsrc.html  cjk.rtf  make_docx.py  make_nonembedded_cjk_pdf.py  make_pptx.py  make_xlsx.py  multi.ods  realtest-doc.docx  sample.csv  sample.docx  sample.md  sample.odp  sample.ods  sample.odt  sample.pptx  sample.rtf  sample.xlsx  stress.md  styled.odt  utf16.csv
examples/browser/: csv.html  docx.html  index.html  pdf.html  pptx.html  xlsx.html
scripts/: build-wasm.sh
