[package]
name = "dv-pptx"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Self-written PPTX slide renderer for doc-viewer: parses DrawingML shapes/text and lays them out into the shared display-list IR."

[dependencies]
dv-ir.workspace = true
dv-text.workspace = true
dv-image.workspace = true
quick-xml = "0.31"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
dv-render = { path = "../dv-render", features = ["png"] }
