[package]
name = "dv-text"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared text & font stack for doc-viewer: shaping (rustybuzz, abstracted) + outlines (skrifa)."

[dependencies]
dv-ir.workspace = true
rustybuzz.workspace = true
skrifa.workspace = true
