[package]
name = "dv-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "wasm-bindgen bindings: the doc-viewer WASM core exposed to JS."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dv-ir.workspace = true
dv-text.workspace = true
dv-render.workspace = true
wasm-bindgen = "=0.2.125"
console_error_panic_hook = "0.1"
