[package]
name = "dv-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "wasm-bindgen bindings: the doc-viewer WASM core exposed to JS."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dv-ir.workspace = true
dv-text.workspace = true
dv-render.workspace = true
dv-xlsx.workspace = true
dv-docx.workspace = true
dv-pptx.workspace = true
dv-flow.workspace = true
dv-md.workspace = true
dv-rtf.workspace = true
dv-odf.workspace = true
wasm-bindgen = "=0.2.125"
js-sys = "0.3"
console_error_panic_hook = "0.1"
